Fix for: The error messages in form should be wrapped to other line when the error message is lengthy(UI is getting disturbed)

--- a/src/main/webapp/styles/less/wm-widgets.less
+++ b/src/main/webapp/styles/less/wm-widgets.less
@@ -3671,6 +3671,7 @@ If the height and width are not specified the video takes the height of the post
       margin-bottom: 0;
     }
   }
+
   .app-form.app-login-form {
     padding: 2.5em 3em;
     .app-login-button {
@@ -3685,6 +3686,9 @@ If the height and width are not specified the video takes the height of the post
       display: inline-block;
     }
   }
+}
+.alert {
+  word-break: break-all;
 }
 
 /************************************************************************************
